src/test/deca/codegen/invalid/objet/debordementTas/tasPleinField.deca
// Description : tas plein avec des declaration de field
// Resultat : erreur lors de ima -t avec un tas petit


class A{
    int a1 = 1;
    int a2 = 1;
    int a3 = 1;
    int a4 = 1;
    int a5 = 1;
    int a6 = 1;
    int a7 = 1;
    int a8 = 1;
    int a9 = 1;
}
{
    A a = new A();
}
